@@ -1,3 +1,8 @@
+2011-08-29  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Image-test/Image-test.m: Test using lockFocus and drawing an image
+	into an image
+
 2011-08-16  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Image-test/Image-test.m: Test the edges of an image remain sharp when
